fixed login/signup box adjusting too much

--- a/client/src/styles/Login.css
+++ b/client/src/styles/Login.css
@@ -5,10 +5,11 @@
 }
 
 .login-box {
+    display: block;
     margin-top: 50px;
     background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75));
     border-radius: 10px;
-    max-height: 25%;
+    height: 300px;
 }
 
 .login-cont {
